Fixing some spacing issues
For the stats and privacy page

--- a/privacy.css
+++ b/privacy.css
@@ -7,6 +7,7 @@ button {
     color: white;
     border: 0px;
     font-size: xx-large;
+    left: 0;
 }
 
 h1 {
